--- a/content/0.server-docs/1.rules/4.opt-in-rules.md
+++ b/content/0.server-docs/1.rules/4.opt-in-rules.md
@@ -49,7 +49,7 @@ Businesses are divided into the following categories;
 
 **B1** - All prospective business applicants must follow the registration/application process to either register for a business license or for an available C-Suite tenure opportunity. DoC are responsible for all businesses. Without a business license, your operation will be deemed illegitimate.
 
-**B2** - Businesses are required to maintain some separation between ‘gang’ and ‘business’ activities. No gang activities are permitted at legitimate player-run business locations. However, exemptions can be made at the discretion of the Department of Commerce upon review. Any gang related activities must be carried out in accordance with all Illegal Organisation Rules.
+**B2** - Businesses are required to maintain some separation between ‘gang’ and ‘business’ activities. No gang activities are permitted at legitimate player-run business locations. However, exemptions can be made at the discretion of the Board of Directors upon review. Any gang related activities must be carried out in accordance with all Illegal Organisation Rules.
 
 **B3** - Players are not permitted to exploit their businesses and/or abuse any abilities through the job menu in accordance with our community/server rules. Anything granted for businesses, i.e job equipment, access to uniforms, are purely for business purposes only.
 
