--- a/content/0.server-docs/3.job-guides/0.open-vs-whitelisted-jobs.md
+++ b/content/0.server-docs/3.job-guides/0.open-vs-whitelisted-jobs.md
@@ -70,7 +70,7 @@ A list of Non-whitelisted jobs can be found below (This list is not exhaustive):
 
 
 ## How to Apply for Whitelisted Jobs
-Applying for jobs is easy and only takes a few minutes out of your day! Open up your phone and select the Jobr App, from here you will be able to see all of the Job Listings that are currently open, select the Job you would like to apply for and fill out the questionare, once completed hit submit.
+Applying for jobs is easy and only takes a few minutes out of your day! Open up your phone and select the **QuackBiz App**, from here you will be able to see all of the Job Listings that are currently open, select the Job you would like to apply for and fill out the questionare, once completed hit submit.
 
 You can then see Job's you've applied for under the **your applications** tab.
 
@@ -78,4 +78,4 @@ You can then see Job's you've applied for under the **your applications** tab.
 To see the eligibility requirements click [here](/server-docs/job-guides/police).
 ::
 
-![Jobr App](https://imgur.com/ZLv5RpL.png)
+![QuackBiz App](https://imgur.com/LDl7jHH.png)
